--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,5 +7,6 @@ pages:
 - PGA Gateway: Gateway-Configurations.md
 - Applications: Application-CookBook.md
 - Pending: Pending.md
+- Airavata API: AiravataApi.md
 
 theme: readthedocs
