--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Airavata Operations Manual
-docs_dir: .
+
 pages:
 - Home: index.md
 - Installations: Installation.md
@@ -10,4 +10,4 @@ pages:
 - Airavata API: AiravataApi.md
 - Contact Us: Contact-Us.md
 
-theme: readthedocs
+theme: mkdocs
