--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,14 +1,22 @@
-site_name: Airavata Operations Manual
+site_name: Airavata Documentation
 docs_dir: .
 
 pages:
-- Home: index.md
-- Installations: Installation.md
-- Airavata & PGA Configuration: Gateway-Configurations.md
+- Home: 'index.md'
+- Installations:
+  - Airavata: 'Airavata-Installation.md'
+  - PGA: 'PGA-Installation.md'
+  - Airavata Property File: 'airavata-properties.md'
+- Configuration:
+  - PGA: 'Gateway-Configurations.md'
+- Documentation:
+  - User Profiles: User-Profiles.md
+  - Applications: Application-CookBook.md
+  - Airavata API: AiravataApi.md
 - FAQ: FAQ.md
-- User Profiles: User-Profiles.md
-- Applications: Application-CookBook.md
-- Airavata API: AiravataApi.md
 - Contact Us: Contact-Us.md
 
-theme: mkdocs
+theme: simplex
+
+extra_css:
+  - css/extra.css
